--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">To-Do App</string>
+    <string name="icon">Icon</string>
+    <string name="tasks">Tasks</string>
+    <string name="add">Add</string>
+    <string name="add_your_first_task">Add your first task...</string>
 </resources>
