--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="add">Add</string>
     <string name="add_your_first_task">Add your first task...</string>
     <string name="cancel">Cancel</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="save_task">Save Task</string>
 
 </resources>
